testing-app/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: saif
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
  labels:
    app: test-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test-app
