testing-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: saif
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: mynginxclass
  tls:
  - hosts:
    - nginx.testing.com
    secretName: my-self-signed-tls
  rules:
    - host: nginx.testing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app-service
                port:
                  number: 80
